# SafeBoard

./: README.md  readme.md
hackathon_2017_developers/: safeboard_hackathon_2017_editorial.pptx
hackathon_2017_developers/cpp/: generate_sln.bat
hackathon_2017_developers/cpp/04.sum.in.matrix/: 04.input.main.txt
hackathon_2017_developers/problems/: 02.stack.calc.txt  03.sum.of.digits.easy.txt  04.sum.in.matrix.txt  05.3n.numbers.txt  06.to.be.txt  07.path.in.matrix.txt  08.substring.txt  09.xor.txt  10.natural.sort.txt  11.sum.of.digits.hard.txt  12.circles.txt  13.maze.txt
hackathon_2017_developers/solutions/cpp/: CMakeLists.txt
hackathon_2017_developers/solutions/cpp/02.stack.calc/: 02.input.main.txt  02.stack.calc.dh.cpp  CMakeLists.txt
hackathon_2017_developers/solutions/cpp/03.sum.of.digits.easy/: 03.sum.of.digits.easy.dh.cpp  CMakeLists.txt
hackathon_2017_developers/solutions/cpp/04.sum.in.matrix/: 04.sum.in.matrix.dh.cpp  CMakeLists.txt
hackathon_2017_developers/solutions/cpp/05.3n.numbers/: 05.3n.numbers.dh.cpp
hackathon_2017_developers/solutions/cpp/06.to.be/: 06.input.main.txt  06.to.be.dh.cpp  CMakeLists.txt
hackathon_2017_developers/solutions/cpp/08.substring/: 08.substring.dh.cpp
hackathon_2017_developers/solutions/cpp/10.natural.sort/: CMakeLists.txt
hackathon_2017_developers/solutions/cpp/11.sum.of.digits.hard/: CMakeLists.txt
hackathon_2017_developers/solutions/cpp/12.circles/: 12.circles.dh.cpp
hackathon_2017_developers/solutions/cpp/13.maze/: 13.input.main.txt  13.maze.dh.cpp  CMakeLists.txt
(+38 files in other folders)
