cmake_minimum_required(VERSION 2.8)
project(contest)

add_definitions(-D_SCL_SECURE_NO_WARNINGS)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
add_definitions(-DNOMINMAX)

if (MSVC)
	if (CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
		string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
	else()
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
	endif()
endif()

add_subdirectory(02.stack.calc)
add_subdirectory(03.sum.of.digits.easy)
add_subdirectory(04.sum.in.matrix)
add_subdirectory(05.3n.numbers)
add_subdirectory(06.to.be)
add_subdirectory(07.path.in.matrix)
add_subdirectory(08.substring)
add_subdirectory(09.xor)
add_subdirectory(10.natural.sort)
add_subdirectory(11.sum.of.digits.hard)
add_subdirectory(12.circles)
add_subdirectory(13.maze)
